continued work on term project

--- a/GreenRidge_Christmas_Trees.ipynb
+++ b/GreenRidge_Christmas_Trees.ipynb
@@ -38,14 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FirstName: Bodie LastName: Wright\n",
       "FirstName: Bodie LastName: Wright\n"
      ]
     }
@@ -115,13 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter employee's first name: Bodie\n",
+      "Enter employee's last name: Wright\n",
+      "Enter number of hours worked: 10\n",
+      "Enter employee's hourly rate: 12\n",
+      "0. Exit\n",
+      "1. Calculate total pay\n",
+      "Enter choice: 1\n",
+      "Result:  120\n",
+      "0. Exit\n",
+      "1. Calculate total pay\n",
+      "Enter choice: 0\n",
+      "Exiting!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "class Employee_wages(Employee):\n",
+    "class Employee_wages:\n",
     "    def __init__(self,hours_worked, hourly_rate):\n",
     "        self.hours_worked = hours_worked\n",
     "        self.hourly_rate = hourly_rate\n",
@@ -129,9 +146,11 @@
     "    def total_pay(self):\n",
     "        return self.hours_worked*self.hourly_rate\n",
     "\n",
+    "first_name = input(\"Enter employee's first name: \")\n",
+    "last_name = input(\"Enter employee's last name: \")\n",
     "hours_worked = int(input(\"Enter number of hours worked: \"))\n",
     "hourly_rate = int(input(\"Enter employee's hourly rate: \"))\n",
-    "obj = total_pay(a,b)\n",
+    "obj = Employee_wages(hours_worked, hourly_rate)\n",
     "choice=1\n",
     "while choice!=0:\n",
     "    print(\"0. Exit\")\n",
