term project in progress 12/19/17 22:50

--- a/GreenRidge_Christmas_Trees.ipynb
+++ b/GreenRidge_Christmas_Trees.ipynb
@@ -38,6 +38,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching package metadata .............\n",
+      "Solving package specifications: .\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "# packages in environment at /opt/conda:\n",
+      "#\n",
+      "ipywidgets                7.0.5                    py35_0    conda-forge\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda install ipywidgets -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interact, interactive, fixed\n",
+    "from IPython.display import clear_output, display, HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -50,6 +85,7 @@
     }
    ],
    "source": [
+    "#working one\n",
     "class Employee:\n",
     "\n",
     "    #initialize the attributes\n",
@@ -114,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,12 +159,12 @@
      "text": [
       "Enter employee's first name: Bodie\n",
       "Enter employee's last name: Wright\n",
-      "Enter number of hours worked: 10\n",
+      "Enter number of hours worked: 12\n",
       "Enter employee's hourly rate: 12\n",
       "0. Exit\n",
       "1. Calculate total pay\n",
       "Enter choice: 1\n",
-      "Result:  120\n",
+      "Result:  144\n",
       "0. Exit\n",
       "1. Calculate total pay\n",
       "Enter choice: 0\n",
@@ -138,6 +174,7 @@
     }
    ],
    "source": [
+    "#working one\n",
     "class Employee_wages:\n",
     "    def __init__(self,hours_worked, hourly_rate):\n",
     "        self.hours_worked = hours_worked\n",
@@ -163,6 +200,41 @@
     "        print(\"Exiting!\")\n",
     "    else:\n",
     "        print(\"Invalid choice!!\")\n",
+    " \n",
+    " \n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "type() takes 1 or 3 arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-beede0112c67>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0minteract\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhours_worked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhourly_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mEmployee_wages\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhours_worked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhourly_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhours_worked\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhourly_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhours_worked\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhours_worked\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhourly_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhourly_rate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: type() takes 1 or 3 arguments"
+     ]
+    }
+   ],
+   "source": [
+    "@interact (hours_worked = (0, 100), hourly_rate = (5, 10))\n",
+    "class Employee_wages(hours_worked = 0, hourly_rate = 5):\n",
+    "    def __init__(self,hours_worked, hourly_rate):\n",
+    "        self.hours_worked = hours_worked\n",
+    "        self.hourly_rate = hourly_rate\n",
+    "\n",
+    "    def total_pay(self):\n",
+    "        return self.hours_worked*self.hourly_rate\n",
+    "\n",
+    "first_name = input(\"Enter employee's first name: \")\n",
+    "last_name = input(\"Enter employee's last name: \")\n",
+    "obj = Employee_wages(hours_worked, hourly_rate)\n",
     " \n",
     " \n",
     "print()"
