all working code, just need to clean up styling

--- a/GreenRidge_Christmas_Trees.ipynb
+++ b/GreenRidge_Christmas_Trees.ipynb
@@ -2,48 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Person object at 0x7f4f708a55f8>\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Person(object):\n",
-    "    def __init__(self, first_name, last_name):\n",
-    "        self.__first_name = first_name\n",
-    "        self.__last_name = last_name\n",
-    "        def __str__(self):\n",
-    "            tup=(str(self.first_name),str(self.last_name))\n",
-    "            return ','.join(tup)\n",
-    "\n",
-    "class Employee(Person):\n",
-    "    def __init__(self, hourly_rate, hours_worked):\n",
-    "        Employee.__init__(self, hourly_rate, hours_worked)\n",
-    "        self.__hourly_rate = hourly_rate\n",
-    "        self.__hours_worked = hours_worked\n",
-    "        \n",
-    "        @property\n",
-    "        def Employees_pay(self):\n",
-    "            return self.__Employees_pay\n",
-    "Test_person = Person(first_name = \"Bodie\", last_name = \"Wright\")\n",
-    "print (Test_person)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#!conda install ipywidgets -y"
+    "!conda install ipywidgets -y"
    ]
   },
   {
@@ -54,21 +19,20 @@
    },
    "outputs": [],
    "source": [
-    "#from ipywidgets import interact, interactive, fixed\n",
-    "#from IPython.display import clear_output, display, HTML"
+    "from ipywidgets import interact, interactive, fixed\n",
+    "from IPython.display import clear_output, display, HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-884d13a4b491>, line 29)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-884d13a4b491>\"\u001b[0;36m, line \u001b[0;32m29\u001b[0m\n\u001b[0;31m    print Employee_list(Employee(first_name = \"Bodie\", last_name = \"Wright\"))\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee's Name: Bodie Wright\n"
      ]
     }
    ],
@@ -100,95 +64,10 @@
     "    #return the objects state as a string\n",
     "\n",
     "    def __str__(self):\n",
-    "        return 'FirstName: ' + self.__first_name + \\\n",
-    "               ' LastName: ' + self.__last_name\n",
+    "        return \"Employee's Name: \" + self.__first_name + \" \" + self.__last_name\n",
     "        \n",
     "\n",
-    "print Employee_list(Employee(first_name = \"Bodie\", last_name = \"Wright\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Employee_pay(Employee):\n",
-    "    def __init__(self, hourly_rate, hours_worked):\n",
-    "        self.__hourly_rate = hourly_rate\n",
-    "        self.__hours_worked = hours_worked\n",
-    "        \n",
-    "    def set_hourly_rate(self, hourly_rate):\n",
-    "        self.__hourly_rate = hourly_rate\n",
-    "    \n",
-    "    def set_hours_worked(self, hours_worked):\n",
-    "        self.__hours_worked = hours_worked\n",
-    "        \n",
-    "    def get_hourly_rate(self):\n",
-    "        return self.__hourly_rate\n",
-    "    \n",
-    "    def get_hours_worked(self):\n",
-    "        return self.__hours_worked\n",
-    "    \n",
-    "    def calculate_pay(hourly_rate, hours_worked):\n",
-    "        return hourly_rate * hours_worked\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return \"TotalPay: \" + self.calculate_pay\n",
-    "print (Employee_pay(10, 23))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter employee's first name: Mitchell\n",
-      "Enter employee's last name: Henderson\n",
-      "Enter number of hours worked: 12\n",
-      "Enter employee's hourly rate: 12\n",
-      "0. Exit\n",
-      "1. Calculate total pay\n",
-      "Enter choice: 1\n",
-      "Result:  144\n",
-      "0. Exit\n",
-      "1. Calculate total pay\n",
-      "Enter choice: 0\n",
-      "Exiting!\n"
-     ]
-    }
-   ],
-   "source": [
-    "#working one\n",
-    "class Employee_wages:\n",
-    "    def __init__(self,hours_worked, hourly_rate):\n",
-    "        self.hours_worked = hours_worked\n",
-    "        self.hourly_rate = hourly_rate\n",
-    "\n",
-    "    def total_pay(self):\n",
-    "        return self.hours_worked*self.hourly_rate\n",
-    "\n",
-    "first_name = input(\"Enter employee's first name: \")\n",
-    "last_name = input(\"Enter employee's last name: \")\n",
-    "hours_worked = int(input(\"Enter number of hours worked: \"))\n",
-    "hourly_rate = int(input(\"Enter employee's hourly rate: \"))\n",
-    "obj = Employee_wages(hours_worked, hourly_rate)\n",
-    "choice=1\n",
-    "while choice!=0:\n",
-    "    print(\"0. Exit\")\n",
-    "    print(\"1. Calculate total pay\")\n",
-    "\n",
-    "    choice=int(input(\"Enter choice: \"))\n",
-    "    if choice==1:\n",
-    "        print(\"Result: \",obj.total_pay())\n",
-    "    elif choice==0:\n",
-    "        print(\"Exiting!\")\n",
-    "    else:\n",
-    "        print(\"Invalid choice!!\")\n"
+    "print (Employee(first_name = \"Bodie\", last_name = \"Wright\"))"
    ]
   },
   {
@@ -239,6 +118,47 @@
     "        print(\"Exiting!\")\n",
     "    else:\n",
     "        print(\"Invalid choice!!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2cbbafbec0574ef0aa7ceab5cd742456",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>interactive</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "interactive(children=(IntSlider(value=3, description='height', max=15, min=3), IntSlider(value=10, description='flock_cost', max=15, min=10), Output()), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact(height=(3,15), flock_cost = (10,15))\n",
+    "def calculate_flocking_cost(height = 3, flock_cost = 10):\n",
+    "    return height * flock_cost\n"
    ]
   },
   {
